??/??/2022 orbeckst, tluchko, IAlibay

  * 0.7.0

  Changes
  * Python 3.10 is supported

  Enhancements

  * use mrcfile library to parse MRC files (including CCP4) using the
    new mrc.MRC class (issue #83)

  Fixes

  * The new mrc module correctly reorients the coordinate system based
    on mapc, mapr, maps and correctly calculates the origin (issue #76)

  Deprecations

  * The CCP4 module (replaced by mrc) will be removed in 0.8.0.


10/10/2021 eloyfelix, renehamburger1993, lilyminium, jvermaas, xiki-tempula,
           IAlibay, orbeckst

  * 0.6.0

  Changes

  * macOS and Windows are also tested (min and max supported Python, #97)
  * switched CI to using GitHub actions (#86)

  Enhancements

  * Allow parsing/writing gzipped DX files (PR #70, #99)
  * Update doc theme to use sphinx-rtd-theme (#80)
  * Delta of OpenDX writes 7 significant figures (#88)

  Fixes

  * fix initialization of mutable instance variable of Grid class (metadata dict) (#71)
  * fix multiple __init__ calls (#73)
  * interpolation behavior outside of the grid changed to default to a
    constant rather than the nearest value (#84)
  * corrected resampling behavior to not draw on values outside of the grid (#84)


05/16/2019 giacomofiorin, orbeckst

  * 0.5.0

  Changes

  * supported/tested on Python 2.7, >=3.5 (official 3.4 support was
    dropped: it might still work but is not tested anymore)

  Enhancements

  * Allow parsing DX files by NAMD's GridForces module (new typequote keyword, #58)
  * New keyword argument ``Grid(grid=<file>, file_format=<str>)`` to set file format when
    reading from a file (#33)

  Fixes

  * Allow parsing DX files by Pymol's buggy floating-point parser (#58)
  * Fixed loading of pickle files with .pkl suffix
  * Better input handling when constructing a Grid object (#59)

04/06/2019 rathann, tluchko, orbeckst

  * 0.4.1

  Fixes

  * Fixed testsuite on 32bit architectures (issue #44)
  * Improved DX parsing speed (#2)