@@ -62,13 +62,5 @@ the `GridDataFormats repository on GitHub`_ and submit a pull request. Participa
    installation	      
    gridData/overview
    gridData/basic
-   gridData/formats
    gridData/core
-
-
-.. rubric:: Indices and tables
-
-* :ref:`genindex`
-* :ref:`modindex`
-* :ref:`search`
-
+   gridData/formats
